commit translated contents

--- a/docs/docs-ref-autogen/outlook_1_2/outlook/office.userprofile.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/outlook/office.userprofile.yml
@@ -1,90 +1,110 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.UserProfile:interface'
-    summary: 有关与邮箱关联的用户的信息。 这包括帐户类型、显示名称、电子邮件地址和时区。
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
+### YamlMime:TSType
+name: Office.UserProfile
+uid: outlook!Office.UserProfile:interface
+package: outlook!
+fullName: Office.UserProfile
+summary: 有关与邮箱关联的用户的信息。 这包括帐户类型、显示名称、电子邮件地址和时区。
+remarks: >-
+  **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
-    name: Office.UserProfile
-    fullName: Office.UserProfile
-    langs:
-      - typeScript
-    type: interface
-    package: outlook!
-    children:
-      - 'outlook!Office.UserProfile#displayName:member'
-      - 'outlook!Office.UserProfile#emailAddress:member'
-      - 'outlook!Office.UserProfile#timeZone:member'
-  - uid: 'outlook!Office.UserProfile#displayName:member'
-    summary: 获取用户的显示名称。
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
+  **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: displayName
+  uid: outlook!Office.UserProfile#displayName:member
+  package: outlook!
+  fullName: displayName
+  summary: 获取用户的显示名称。
+  remarks: >-
+    **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
-      #### <a name="examples"></a>示例
 
-      ```javascript
-      // Example: Allie Bellew
-      console.log(Office.context.mailbox.userProfile.displayName);
-      ```
-    name: displayName
-    fullName: displayName
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'displayName: string;'
-      return:
-        type:
-          - string
-  - uid: 'outlook!Office.UserProfile#emailAddress:member'
-    summary: 获取用户的 SMTP 电子邮件地址。
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
+    **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
 
-      #### <a name="examples"></a>示例
+    #### <a name="examples"></a>示例
 
-      ```javascript
-      // Example: allieb@contoso.com
-      console.log(Office.context.mailbox.userProfile.emailAddress);
-      ```
-    name: emailAddress
-    fullName: emailAddress
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'emailAddress: string;'
-      return:
-        type:
-          - string
-  - uid: 'outlook!Office.UserProfile#timeZone:member'
-    summary: |-
-      获取用户的 Windows 格式的时区。
 
-      通常会返回系统时区。 但是，在 web 上的 Outlook 中，将改为返回日历首选项中的默认时区。
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
+    ```javascript
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
+    // Example: Allie Bellew
 
-      #### <a name="examples"></a>示例
+    console.log(Office.context.mailbox.userProfile.displayName);
 
-      ```javascript
-      // Example: Pacific Standard Time
-      console.log(Office.context.mailbox.userProfile.timeZone);
-      ```
-    name: timeZone
-    fullName: timeZone
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'timeZone: string;'
-      return:
-        type:
-          - string
+    ```
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'displayName: string;'
+    return:
+      type: string
+- name: emailAddress
+  uid: outlook!Office.UserProfile#emailAddress:member
+  package: outlook!
+  fullName: emailAddress
+  summary: 获取用户的 SMTP 电子邮件地址。
+  remarks: >-
+    **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
+
+
+    **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读
+
+
+    #### <a name="examples"></a>示例
+
+
+    ```javascript
+
+    // Example: allieb@contoso.com
+
+    console.log(Office.context.mailbox.userProfile.emailAddress);
+
+    ```
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'emailAddress: string;'
+    return:
+      type: string
+- name: timeZone
+  uid: outlook!Office.UserProfile#timeZone:member
+  package: outlook!
+  fullName: timeZone
+  summary: >-
+    获取用户的 Windows 格式的时区。
+
+
+    通常会返回系统时区。 但是，在 web 上的 Outlook 中，将改为返回日历首选项中的默认时区。
+  remarks: >-
+    **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
+
+
+    **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读
+
+
+    #### <a name="examples"></a>示例
+
+
+    ```javascript
+
+    // Example: Pacific Standard Time
+
+    console.log(Office.context.mailbox.userProfile.timeZone);
+
+    ```
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'timeZone: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 394c2f1913936116185b4e25e9cc36798de3247b
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329024"
