--- a/docs/docs-ref-autogen/visio/visio/visio.hyperlink.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.hyperlink.yml
@@ -1,205 +1,200 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'visio!Visio.Hyperlink:class'
-    summary: |-
-      表示 Hyperlink 对象。
+### YamlMime:TSType
+name: Visio.Hyperlink
+uid: visio!Visio.Hyperlink:class
+package: visio!
+fullName: Visio.Hyperlink
+summary: >-
+  表示 Hyperlink 对象。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: Visio.Hyperlink
-    fullName: Visio.Hyperlink
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: visio!
-    children:
-      - 'visio!Visio.Hyperlink#address:member'
-      - 'visio!Visio.Hyperlink#context:member'
-      - 'visio!Visio.Hyperlink#description:member'
-      - 'visio!Visio.Hyperlink#extraInfo:member'
-      - 'visio!Visio.Hyperlink#load:member(1)'
-      - 'visio!Visio.Hyperlink#load:member(2)'
-      - 'visio!Visio.Hyperlink#load:member(3)'
-      - 'visio!Visio.Hyperlink#subAddress:member'
-      - 'visio!Visio.Hyperlink#toJSON:member(1)'
-  - uid: 'visio!Visio.Hyperlink#address:member'
-    summary: |-
-      获取超链接对象的地址。 只读。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: address
-    fullName: address
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly address: string;'
-      return:
-        type:
-          - string
-  - uid: 'visio!Visio.Hyperlink#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'visio!Visio.RequestContext:class'
-  - uid: 'visio!Visio.Hyperlink#description:member'
-    summary: |-
-      获取超链接的说明。 只读。
+  \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: address
+  uid: visio!Visio.Hyperlink#address:member
+  package: visio!
+  fullName: address
+  summary: >-
+    获取超链接对象的地址。 只读。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: description
-    fullName: description
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly description: string;'
-      return:
-        type:
-          - string
-  - uid: 'visio!Visio.Hyperlink#extraInfo:member'
-    summary: |-
-      获取用于解析超链接的 URL 的额外 URL 请求信息。 只读。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: extraInfo
-    fullName: extraInfo
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly extraInfo: string;'
-      return:
-        type:
-          - string
-  - uid: 'visio!Visio.Hyperlink#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
-    remarks: |-
-      除了此签名之外，此方法还具有以下签名：
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly address: string;'
+    return:
+      type: string
+- name: context
+  uid: visio!Visio.Hyperlink#context:member
+  package: visio!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="visio!Visio.RequestContext:class" />
+- name: description
+  uid: visio!Visio.Hyperlink#description:member
+  package: visio!
+  fullName: description
+  summary: >-
+    获取超链接的说明。 只读。
 
-      `load(option?: string | string[]): Visio.Hyperlink`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): Visio.Hyperlink`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly description: string;'
+    return:
+      type: string
+- name: extraInfo
+  uid: visio!Visio.Hyperlink#extraInfo:member
+  package: visio!
+  fullName: extraInfo
+  summary: >-
+    获取用于解析超链接的 URL 的额外 URL 请求信息。 只读。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Hyperlink`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
 
-      #### <a name="examples"></a>示例
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly extraInfo: string;'
+    return:
+      type: string
+- name: subAddress
+  uid: visio!Visio.Hyperlink#subAddress:member
+  package: visio!
+  fullName: subAddress
+  summary: >-
+    获取超链接对象的子地址。 只读。
 
-      ```javascript
-      Visio.run(session, function (ctx) {
-          var activePage = ctx.document.getActivePage();
-          var shape = activePage.shapes.getItem(0);
-          var hyperlink = shape.hyperlinks.getItem(0);
-          hyperlink.load();
-          return ctx.sync().then(function() {
-              console.log(hyperlink.description);
-              console.log(hyperlink.address);
-              console.log(hyperlink.subAddress);
-              console.log(hyperlink.extraInfo);
-           });
-      }).catch(function(error) {
-          console.log("Error: " + error);
-          if (error instanceof OfficeExtension.Error) {
-              console.log("Debug info: " + JSON.stringify(error.debugInfo));
-          }
-      });
-      ```
-    name: load(option)
-    fullName: load(option)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(option?: Visio.Interfaces.HyperlinkLoadOptions): Visio.Hyperlink;'
-      return:
-        type:
-          - 'visio!Visio.Hyperlink:class'
-        description: ''
-      parameters:
-        - id: option
-          description: ''
-          type:
-            - 'visio!Visio.Interfaces.HyperlinkLoadOptions:interface'
-  - uid: 'visio!Visio.Hyperlink#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Visio.Hyperlink;'
-      return:
-        type:
-          - 'visio!Visio.Hyperlink:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'visio!Visio.Hyperlink#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Visio.Hyperlink;'
-      return:
-        type:
-          - 'visio!Visio.Hyperlink:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
-          type:
-            - '{ select?: string; expand?: string; }'
-  - uid: 'visio!Visio.Hyperlink#subAddress:member'
-    summary: |-
-      获取超链接对象的子地址。 只读。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: subAddress
-    fullName: subAddress
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly subAddress: string;'
-      return:
-        type:
-          - string
-  - uid: 'visio!Visio.Hyperlink#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始的 Visio. Hyperlink 对象是 API 对象，但 `toJSON` 方法返回一个简单的 JavaScript 对象（类型为`Visio.Interfaces.HyperlinkData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Visio.Interfaces.HyperlinkData;'
-      return:
-        type:
-          - 'visio!Visio.Interfaces.HyperlinkData:interface'
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'visio!Visio.RequestContext:class'
-    name: RequestContext
-  - uid: 'visio!Visio.Hyperlink:class'
-    name: Visio.Hyperlink
-  - uid: 'visio!Visio.Interfaces.HyperlinkLoadOptions:interface'
-    name: Visio.Interfaces.HyperlinkLoadOptions
-  - uid: 'visio!Visio.Interfaces.HyperlinkData:interface'
-    name: Visio.Interfaces.HyperlinkData
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly subAddress: string;'
+    return:
+      type: string
+methods:
+- name: load(option)
+  uid: visio!Visio.Hyperlink#load:member(1)
+  package: visio!
+  fullName: load(option)
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
+  remarks: >-
+    除了此签名之外，此方法还具有以下签名：
+
+
+    `load(option?: string | string[]): Visio.Hyperlink` -Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
+
+
+    `load(option?: { select?: string; expand?: string; }): Visio.Hyperlink` -Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
+
+
+    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Hyperlink` -仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
+
+
+    #### <a name="examples"></a>示例
+
+
+    ```javascript
+
+    Visio.run(session, function (ctx) {
+        var activePage = ctx.document.getActivePage();
+        var shape = activePage.shapes.getItem(0);
+        var hyperlink = shape.hyperlinks.getItem(0);
+        hyperlink.load();
+        return ctx.sync().then(function() {
+            console.log(hyperlink.description);
+            console.log(hyperlink.address);
+            console.log(hyperlink.subAddress);
+            console.log(hyperlink.extraInfo);
+         });
+    }).catch(function(error) {
+        console.log("Error: " + error);
+        if (error instanceof OfficeExtension.Error) {
+            console.log("Debug info: " + JSON.stringify(error.debugInfo));
+        }
+    });
+
+    ```
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(option?: Visio.Interfaces.HyperlinkLoadOptions): Visio.Hyperlink;'
+    parameters:
+    - id: option
+      description: ''
+      type: <xref uid="visio!Visio.Interfaces.HyperlinkLoadOptions:interface" />
+    return:
+      type: <xref uid="visio!Visio.Hyperlink:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: visio!Visio.Hyperlink#load:member(2)
+  package: visio!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Visio.Hyperlink;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="visio!Visio.Hyperlink:class" />
+      description: ''
+- name: load(propertyNamesAndPaths)
+  uid: visio!Visio.Hyperlink#load:member(3)
+  package: visio!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Visio.Hyperlink;'
+    parameters:
+    - id: propertyNamesAndPaths
+      description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
+      type: '{ select?: string; expand?: string; }'
+    return:
+      type: <xref uid="visio!Visio.Hyperlink:class" />
+      description: ''
+- name: toJSON()
+  uid: visio!Visio.Hyperlink#toJSON:member(1)
+  package: visio!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始的 Visio. Hyperlink 对象是 API 对象，则该 `toJSON` 方法返回一个简单的 JavaScript 对象 (类型为 `Visio.Interfaces.HyperlinkData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Visio.Interfaces.HyperlinkData;'
+    return:
+      type: <xref uid="visio!Visio.Interfaces.HyperlinkData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: 5def5f7e531673ecdd2305a113668f53fa4405c2
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328450"
