--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapeviewupdatedata.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapeviewupdatedata.yml
@@ -1,30 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'visio!Visio.Interfaces.ShapeViewUpdateData:interface'
-    summary: '一个用于更新 ShapeView 对象上的数据的接口，可用于 "shapeView （<!-- -->{ ... }<!-- -->)".'
-    name: Visio.Interfaces.ShapeViewUpdateData
-    fullName: Visio.Interfaces.ShapeViewUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: visio!
-    children:
-      - 'visio!Visio.Interfaces.ShapeViewUpdateData#highlight:member'
-  - uid: 'visio!Visio.Interfaces.ShapeViewUpdateData#highlight:member'
-    summary: |-
-      表示形状周围的突出显示内容。
+### YamlMime:TSType
+name: Visio.Interfaces.ShapeViewUpdateData
+uid: visio!Visio.Interfaces.ShapeViewUpdateData:interface
+package: visio!
+fullName: Visio.Interfaces.ShapeViewUpdateData
+summary: 用于更新 ShapeView 对象上的数据的接口，用于在 "shapeView ( 中使用<!-- -->{ ... }<!-- -->)".
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: highlight
+  uid: visio!Visio.Interfaces.ShapeViewUpdateData#highlight:member
+  package: visio!
+  fullName: highlight
+  summary: >-
+    表示形状周围的突出显示内容。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: highlight
-    fullName: highlight
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'highlight?: Visio.Highlight;'
-      return:
-        type:
-          - 'visio!Visio.Highlight:interface'
-references:
-  - uid: 'visio!Visio.Highlight:interface'
-    name: Visio.Highlight
+
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'highlight?: Visio.Highlight;'
+    return:
+      type: <xref uid="visio!Visio.Highlight:interface" />
+metadata:
+  ms.openlocfilehash: 996195f3a8d91f7346d30d98e9f61f82057baeb7
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328387"
