--- a/docs/docs-ref-autogen/visio/visio/visio.overlayhorizontalalignment.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.overlayhorizontalalignment.yml
@@ -1,41 +1,33 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'visio!Visio.OverlayHorizontalAlignment:enum'
-    summary: |-
-      表示相对于形状的覆盖方向的水平对齐方式。
+### YamlMime:TSEnum
+name: Visio.OverlayHorizontalAlignment
+uid: visio!Visio.OverlayHorizontalAlignment:enum
+package: visio!
+fullName: Visio.OverlayHorizontalAlignment
+summary: >-
+  表示相对于形状的覆盖方向的水平对齐方式。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: Visio.OverlayHorizontalAlignment
-    fullName: Visio.OverlayHorizontalAlignment
-    langs:
-      - typeScript
-    type: enum
-    package: visio!
-    children:
-      - 'visio!Visio.OverlayHorizontalAlignment.center:member'
-      - 'visio!Visio.OverlayHorizontalAlignment.left:member'
-      - 'visio!Visio.OverlayHorizontalAlignment.right:member'
-  - uid: 'visio!Visio.OverlayHorizontalAlignment.center:member'
-    summary: 置
-    name: center
-    fullName: center
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Center"'
-  - uid: 'visio!Visio.OverlayHorizontalAlignment.left:member'
-    summary: 左边
-    name: left
-    fullName: left
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Left"'
-  - uid: 'visio!Visio.OverlayHorizontalAlignment.right:member'
-    summary: 左向右
-    name: right
-    fullName: right
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Right"'
+
+  \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: center
+  uid: visio!Visio.OverlayHorizontalAlignment.center:member
+  package: visio!
+  summary: 置
+- name: left
+  uid: visio!Visio.OverlayHorizontalAlignment.left:member
+  package: visio!
+  summary: 左边
+- name: right
+  uid: visio!Visio.OverlayHorizontalAlignment.right:member
+  package: visio!
+  summary: 左向右
+metadata:
+  ms.openlocfilehash: 9d5302c5324475c88dbd8f8b12356c49fe4a27b1
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328380"
