--- a/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartloadoptions.yml
@@ -1,63 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.CustomXmlPartLoadOptions:interface'
-    summary: |-
-      表示一个自定义 XML 部件。
+### YamlMime:TSType
+name: Word.Interfaces.CustomXmlPartLoadOptions
+uid: word!Word.Interfaces.CustomXmlPartLoadOptions:interface
+package: word!
+fullName: Word.Interfaces.CustomXmlPartLoadOptions
+summary: >-
+  表示一个自定义 XML 部件。
 
-      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
-    name: Word.Interfaces.CustomXmlPartLoadOptions
-    fullName: Word.Interfaces.CustomXmlPartLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.CustomXmlPartLoadOptions#$all:member'
-      - 'word!Word.Interfaces.CustomXmlPartLoadOptions#id:member'
-      - 'word!Word.Interfaces.CustomXmlPartLoadOptions#namespaceUri:member'
-  - uid: 'word!Word.Interfaces.CustomXmlPartLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    isPreview: true
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.CustomXmlPartLoadOptions#id:member'
-    summary: |-
-      获取自定义 XML 部件的 ID。 只读。
 
-      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.CustomXmlPartLoadOptions#namespaceUri:member'
-    summary: |-
-      获取自定义 XML 部件的命名空间 URI。 只读。
+  \[[API 集： WORDAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+remarks: ''
+isPreview: true
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: word!Word.Interfaces.CustomXmlPartLoadOptions#$all:member
+  package: word!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: word!Word.Interfaces.CustomXmlPartLoadOptions#id:member
+  package: word!
+  fullName: id
+  summary: >-
+    获取自定义 XML 部件的 ID。 只读。
 
-      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
-    name: namespaceUri
-    fullName: namespaceUri
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'namespaceUri?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： WORDAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: namespaceUri
+  uid: word!Word.Interfaces.CustomXmlPartLoadOptions#namespaceUri:member
+  package: word!
+  fullName: namespaceUri
+  summary: >-
+    获取自定义 XML 部件的命名空间 URI。 只读。
+
+
+    \[[API 集： WORDAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'namespaceUri?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 2fda1895465c1260ff17c94fd9926d1e31e5f2e3
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328338"
