--- a/docs/docs-ref-autogen/visio/visio/visio.highlight.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.highlight.yml
@@ -1,65 +1,55 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'visio!Visio.Highlight:interface'
-    summary: |-
-      表示添加到形状的突出显示数据。
-
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: Visio.Highlight
-    fullName: Visio.Highlight
-    langs:
-      - typeScript
-    type: interface
-    package: visio!
-    children:
-      - 'visio!Visio.Highlight#color:member'
-      - 'visio!Visio.Highlight#width:member'
-  - uid: 'visio!Visio.Highlight#color:member'
-    summary: |-
-      指定突出显示数据的颜色的字符串。 它必须具有 " \# RRGGBB" 窗体，其中每个字母表示一个介于0和 F 之间的十六进制数字，其中 RR 是介于0和0xff 之间的红色值（255），GG 值介于0和0xff （255）之间，BB 是介于0和0xff （255）之间的蓝色值。
-
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color: string;'
-      return:
-        type:
-          - string
-        description: |-
+### YamlMime:TSType
+name: Visio.Highlight
+uid: visio!Visio.Highlight:interface
+package: visio!
+fullName: Visio.Highlight
+summary: >-
+  表示添加到形状的突出显示数据。
 
 
-          #### <a name="examples"></a>示例
+  \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: color
+  uid: visio!Visio.Highlight#color:member
+  package: visio!
+  fullName: color
+  summary: >-
+    指定突出显示数据的颜色的字符串。 它必须具有 " \# RRGGBB" 窗体，其中每个字母表示一个介于0和 F 之间的十六进制数字，其中 RR 是介于0和0xff 之间的红色值 (255) 、GG 0 和0xff 之间的绿色值 (255) ，BB 为介于0和0xff 之间的蓝色值 (255) 。
 
-          ```javascript
-          Visio.run(session, function (ctx) {
-              var activePage = ctx.document.getActivePage();
-              var shape = activePage.shapes.getItem(0);
-              shape.view.highlight.color = "#E7E7E7";
-              shape.view.highlight.width = 100;
-              return ctx.sync();
-          }).catch(function(error) {
-              console.log("Error: " + error);
-              if (error instanceof OfficeExtension.Error) {
-                  console.log("Debug info: " + JSON.stringify(error.debugInfo));
-              }
-          });
-          ```
-  - uid: 'visio!Visio.Highlight#width:member'
-    summary: |-
-      指定突出显示数据的笔划宽度（以像素为单位）的正整数。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: width
-    fullName: width
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'width: number;'
-      return:
-        type:
-          - number
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color: string;'
+    return:
+      type: string
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\nVisio.run(session, function (ctx) {\n    var activePage = ctx.document.getActivePage();\n    var shape = activePage.shapes.getItem(0);\n    shape.view.highlight.color = \"#E7E7E7\";\n    shape.view.highlight.width = 100;\n    return ctx.sync();\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+- name: width
+  uid: visio!Visio.Highlight#width:member
+  package: visio!
+  fullName: width
+  summary: >-
+    指定突出显示数据的笔划宽度（以像素为单位）的正整数。
+
+
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'width: number;'
+    return:
+      type: number
+metadata:
+  ms.openlocfilehash: bc6fa7a041ff59a6396f742f35c8005caba66164
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328457"
