--- a/docs/docs-ref-autogen/visio/visio/visio.shapecollection.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.shapecollection.yml
@@ -1,220 +1,160 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'visio!Visio.ShapeCollection:class'
-    summary: |-
-      表示 Shape 集合。
-
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: Visio.ShapeCollection
-    fullName: Visio.ShapeCollection
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: visio!
-    children:
-      - 'visio!Visio.ShapeCollection#context:member'
-      - 'visio!Visio.ShapeCollection#getCount:member(1)'
-      - 'visio!Visio.ShapeCollection#getItem:member(1)'
-      - 'visio!Visio.ShapeCollection#items:member'
-      - 'visio!Visio.ShapeCollection#load:member(1)'
-      - 'visio!Visio.ShapeCollection#load:member(2)'
-      - 'visio!Visio.ShapeCollection#load:member(3)'
-      - 'visio!Visio.ShapeCollection#toJSON:member(1)'
-  - uid: 'visio!Visio.ShapeCollection#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'visio!Visio.RequestContext:class'
-  - uid: 'visio!Visio.ShapeCollection#getCount:member(1)'
-    summary: |-
-      获取集合中的形状数量。
-
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: getCount()
-    fullName: getCount()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getCount(): OfficeExtension.ClientResult<number>;'
-      return:
-        type:
-          - 'visio!Visio.ShapeCollection#getCount~0:complex'
-        description: |-
+### YamlMime:TSType
+name: Visio.ShapeCollection
+uid: visio!Visio.ShapeCollection:class
+package: visio!
+fullName: Visio.ShapeCollection
+summary: >-
+  表示 Shape 集合。
 
 
-          #### <a name="examples"></a>示例
+  \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: visio!Visio.ShapeCollection#context:member
+  package: visio!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="visio!Visio.RequestContext:class" />
+- name: items
+  uid: visio!Visio.ShapeCollection#items:member
+  package: visio!
+  fullName: items
+  summary: 获取此集合中已加载的子项。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly items: Visio.Shape[];'
+    return:
+      type: <xref uid="visio!Visio.Shape:class" />[]
+methods:
+- name: getCount()
+  uid: visio!Visio.ShapeCollection#getCount:member(1)
+  package: visio!
+  fullName: getCount()
+  summary: >-
+    获取集合中的形状数量。
 
-          ```javascript
-          Visio.run(session, function (ctx) {
-              var activePage = ctx.document.getActivePage();
-              var numShapesActivePage = activePage.shapes.getCount();
-              return ctx.sync().then(function () {
-                  console.log("Shapes Count: " + numShapesActivePage.value);
-              });
-          }).catch(function(error) {
-              console.log("Error: " + error);
-              if (error instanceof OfficeExtension.Error) {
-                  console.log("Debug info: " + JSON.stringify(error.debugInfo));
-              }
-          });
-          ```
-  - uid: 'visio!Visio.ShapeCollection#getItem:member(1)'
-    summary: |-
-      按键（名称或索引）获取形状。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: getItem(key)
-    fullName: getItem(key)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getItem(key: number | string): Visio.Shape;'
-      return:
-        type:
-          - 'visio!Visio.Shape:class'
-        description: ''
-      parameters:
-        - id: key
-          description: 键是要检索的形状的名称或索引。
-          type:
-            - number | string
-  - uid: 'visio!Visio.ShapeCollection#items:member'
-    summary: 获取此集合中已加载的子项。
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly items: Visio.Shape[];'
-      return:
-        type:
-          - 'visio!Visio.ShapeCollection#items~0:complex'
-  - uid: 'visio!Visio.ShapeCollection#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
-    remarks: |-
-      除了此签名之外，此方法还具有以下签名：
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getCount(): OfficeExtension.ClientResult<number>;'
+    return:
+      type: <xref uid="office!OfficeExtension.ClientResult:class" />&lt;number&gt;
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\nVisio.run(session, function (ctx) {\n    var activePage = ctx.document.getActivePage();\n    var numShapesActivePage = activePage.shapes.getCount();\n    return ctx.sync().then(function () {\n        console.log(\"Shapes Count: \" + numShapesActivePage.value);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+- name: getItem(key)
+  uid: visio!Visio.ShapeCollection#getItem:member(1)
+  package: visio!
+  fullName: getItem(key)
+  summary: >-
+    按键（名称或索引）获取形状。
 
-      `load(option?: string | string[]): Visio.ShapeCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): Visio.ShapeCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getItem(key: number | string): Visio.Shape;'
+    parameters:
+    - id: key
+      description: 键是要检索的形状的名称或索引。
+      type: number | string
+    return:
+      type: <xref uid="visio!Visio.Shape:class" />
+      description: ''
+- name: load(option)
+  uid: visio!Visio.ShapeCollection#load:member(1)
+  package: visio!
+  fullName: load(option)
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
+  remarks: >-
+    除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.ShapeCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
-    name: load(option)
-    fullName: load(option)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(option?: Visio.Interfaces.ShapeCollectionLoadOptions & Visio.Interfaces.CollectionLoadOptions): Visio.ShapeCollection;'
-      return:
-        type:
-          - 'visio!Visio.ShapeCollection:class'
-        description: ''
-      parameters:
-        - id: option
-          description: ''
-          type:
-            - 'visio!Visio.ShapeCollection#load~0:complex'
-  - uid: 'visio!Visio.ShapeCollection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Visio.ShapeCollection;'
-      return:
-        type:
-          - 'visio!Visio.ShapeCollection:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'visio!Visio.ShapeCollection#load:member(3)'
-    name: load(option)
-    fullName: load(option)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(option?: OfficeExtension.LoadOption): Visio.ShapeCollection;'
-      return:
-        type:
-          - 'visio!Visio.ShapeCollection:class'
-        description: ''
-      parameters:
-        - id: option
-          description: ''
-          type:
-            - 'office!OfficeExtension.LoadOption:interface'
-  - uid: 'visio!Visio.ShapeCollection#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 `Visio.ShapeCollection` 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Visio.Interfaces.ShapeCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Visio.Interfaces.ShapeCollectionData;'
-      return:
-        type:
-          - 'visio!Visio.Interfaces.ShapeCollectionData:interface'
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'visio!Visio.RequestContext:class'
-    name: RequestContext
-  - uid: 'visio!Visio.ShapeCollection#getCount~0:complex'
-    name: OfficeExtension.ClientResult<number>
-    fullName: OfficeExtension.ClientResult<number>
-    spec.typeScript:
-      - uid: 'office!OfficeExtension.ClientResult:class'
-        name: OfficeExtension.ClientResult
-        fullName: OfficeExtension.ClientResult
-      - name: <number>
-        fullName: <number>
-  - uid: 'visio!Visio.Shape:class'
-    name: Visio.Shape
-  - uid: 'visio!Visio.ShapeCollection#items~0:complex'
-    name: 'Visio.Shape[]'
-    fullName: 'Visio.Shape[]'
-    spec.typeScript:
-      - uid: 'visio!Visio.Shape:class'
-        name: Visio.Shape
-        fullName: Visio.Shape
-      - name: '[]'
-        fullName: '[]'
-  - uid: 'visio!Visio.ShapeCollection:class'
-    name: Visio.ShapeCollection
-  - uid: 'visio!Visio.ShapeCollection#load~0:complex'
-    name: Visio.Interfaces.ShapeCollectionLoadOptions & Visio.Interfaces.CollectionLoadOptions
-    fullName: Visio.Interfaces.ShapeCollectionLoadOptions & Visio.Interfaces.CollectionLoadOptions
-    spec.typeScript:
-      - uid: 'visio!Visio.Interfaces.ShapeCollectionLoadOptions:interface'
-        name: Visio.Interfaces.ShapeCollectionLoadOptions
-        fullName: Visio.Interfaces.ShapeCollectionLoadOptions
-      - name: ' & '
-        fullName: ' & '
-      - uid: 'visio!Visio.Interfaces.CollectionLoadOptions:interface'
-        name: Visio.Interfaces.CollectionLoadOptions
-        fullName: Visio.Interfaces.CollectionLoadOptions
-  - uid: 'office!OfficeExtension.LoadOption:interface'
-    name: OfficeExtension.LoadOption
-  - uid: 'visio!Visio.Interfaces.ShapeCollectionData:interface'
-    name: Visio.Interfaces.ShapeCollectionData
+
+    `load(option?: string | string[]): Visio.ShapeCollection` -Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
+
+
+    `load(option?: { select?: string; expand?: string; }): Visio.ShapeCollection` -Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
+
+
+    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.ShapeCollection` -仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(option?: Visio.Interfaces.ShapeCollectionLoadOptions & Visio.Interfaces.CollectionLoadOptions): Visio.ShapeCollection;'
+    parameters:
+    - id: option
+      description: ''
+      type: <xref uid="visio!Visio.Interfaces.ShapeCollectionLoadOptions:interface" /> & <xref uid="visio!Visio.Interfaces.CollectionLoadOptions:interface" />
+    return:
+      type: <xref uid="visio!Visio.ShapeCollection:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: visio!Visio.ShapeCollection#load:member(2)
+  package: visio!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Visio.ShapeCollection;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="visio!Visio.ShapeCollection:class" />
+      description: ''
+- name: load(option)
+  uid: visio!Visio.ShapeCollection#load:member(3)
+  package: visio!
+  fullName: load(option)
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(option?: OfficeExtension.LoadOption): Visio.ShapeCollection;'
+    parameters:
+    - id: option
+      description: ''
+      type: <xref uid="office!OfficeExtension.LoadOption:interface" />
+    return:
+      type: <xref uid="visio!Visio.ShapeCollection:class" />
+      description: ''
+- name: toJSON()
+  uid: visio!Visio.ShapeCollection#toJSON:member(1)
+  package: visio!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) 而原始 `Visio.ShapeCollection` 对象是 API 对象，则该 `toJSON` 方法返回一个纯 JavaScript 对象 (类型为 `Visio.Interfaces.ShapeCollectionData`<!-- -->包含集合项中任何已加载属性的浅表的 "items" 数组 ) 。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Visio.Interfaces.ShapeCollectionData;'
+    return:
+      type: <xref uid="visio!Visio.Interfaces.ShapeCollectionData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: f7ef12772f8aa2a9342a2e41290232a7a3944fd7
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328366"
