--- a/docs/docs-ref-autogen/visio/visio/visio.shapemouseleaveeventargs.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.shapemouseleaveeventargs.yml
@@ -1,68 +1,54 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'visio!Visio.ShapeMouseLeaveEventArgs:interface'
-    summary: |-
-      提供有关引发了 ShapeMouseLeave 事件的形状的信息。
-
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: Visio.ShapeMouseLeaveEventArgs
-    fullName: Visio.ShapeMouseLeaveEventArgs
-    langs:
-      - typeScript
-    type: interface
-    package: visio!
-    remarks: |-
+### YamlMime:TSType
+name: Visio.ShapeMouseLeaveEventArgs
+uid: visio!Visio.ShapeMouseLeaveEventArgs:interface
+package: visio!
+fullName: Visio.ShapeMouseLeaveEventArgs
+summary: >-
+  提供有关引发了 ShapeMouseLeave 事件的形状的信息。
 
 
-      #### <a name="examples"></a>示例
+  \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+remarks: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\nVisio.run(session, function (ctx) {\n    var document1= ctx.document;\n    eventResult2 = document1.onShapeMouseLeave.add(\n        function (args){            \n            console.log(Date.now()+\":OnShapeMouseLeave Event\"+JSON.stringify(args));\n        });\n    return ctx.sync().then(function () {\n        console.log(\"Success\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: pageName
+  uid: visio!Visio.ShapeMouseLeaveEventArgs#pageName:member
+  package: visio!
+  fullName: pageName
+  summary: >-
+    获取页面的名称，其中包含引发了 ShapeMouseLeave 事件的 shape 对象。
 
-      ```javascript
-      Visio.run(session, function (ctx) {
-          var document1= ctx.document;
-          eventResult2 = document1.onShapeMouseLeave.add(
-              function (args){            
-                  console.log(Date.now()+":OnShapeMouseLeave Event"+JSON.stringify(args));
-              });
-          return ctx.sync().then(function () {
-              console.log("Success");
-          });
-      }).catch(function(error) {
-          console.log("Error: " + error);
-          if (error instanceof OfficeExtension.Error) {
-              console.log("Debug info: " + JSON.stringify(error.debugInfo));
-          }
-      });
-      ```
-    children:
-      - 'visio!Visio.ShapeMouseLeaveEventArgs#pageName:member'
-      - 'visio!Visio.ShapeMouseLeaveEventArgs#shapeName:member'
-  - uid: 'visio!Visio.ShapeMouseLeaveEventArgs#pageName:member'
-    summary: |-
-      获取页面的名称，其中包含引发了 ShapeMouseLeave 事件的 shape 对象。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: pageName
-    fullName: pageName
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'pageName: string;'
-      return:
-        type:
-          - string
-  - uid: 'visio!Visio.ShapeMouseLeaveEventArgs#shapeName:member'
-    summary: |-
-      获取引发 ShapeMouseLeave 事件的 shape 对象的名称。
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'pageName: string;'
+    return:
+      type: string
+- name: shapeName
+  uid: visio!Visio.ShapeMouseLeaveEventArgs#shapeName:member
+  package: visio!
+  fullName: shapeName
+  summary: >-
+    获取引发 ShapeMouseLeave 事件的 shape 对象的名称。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: shapeName
-    fullName: shapeName
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'shapeName: string;'
-      return:
-        type:
-          - string
+
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'shapeName: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 2d30097718f958e7acdbed15001fd20c4d87df41
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328359"
