--- a/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartcollectiondata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartcollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.CustomXmlPartCollectionData:interface'
-    summary: 描述通过调用返回的数据的接口`customXmlPartCollection.toJSON()`<!-- -->.
-    name: Word.Interfaces.CustomXmlPartCollectionData
-    fullName: Word.Interfaces.CustomXmlPartCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.CustomXmlPartCollectionData#items:member'
-  - uid: 'word!Word.Interfaces.CustomXmlPartCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Word.Interfaces.CustomXmlPartData[];'
-      return:
-        type:
-          - 'word!Word.Interfaces.CustomXmlPartCollectionData#items~0:complex'
-references:
-  - uid: 'word!Word.Interfaces.CustomXmlPartCollectionData#items~0:complex'
-    name: 'Word.Interfaces.CustomXmlPartData[]'
-    fullName: 'Word.Interfaces.CustomXmlPartData[]'
-    spec.typeScript:
-      - uid: 'word!Word.Interfaces.CustomXmlPartData:interface'
-        name: Word.Interfaces.CustomXmlPartData
-        fullName: Word.Interfaces.CustomXmlPartData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Word.Interfaces.CustomXmlPartCollectionData
+uid: word!Word.Interfaces.CustomXmlPartCollectionData:interface
+package: word!
+fullName: Word.Interfaces.CustomXmlPartCollectionData
+summary: 描述通过调用返回的数据的接口 `customXmlPartCollection.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: word!Word.Interfaces.CustomXmlPartCollectionData#items:member
+  package: word!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Word.Interfaces.CustomXmlPartData[];'
+    return:
+      type: <xref uid="word!Word.Interfaces.CustomXmlPartData:interface" />[]
+metadata:
+  ms.openlocfilehash: 4b68706ad4656fc17c5c20eb13f5dcfe47162181
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328352"
