--- a/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartdata.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.customxmlpartdata.yml
@@ -1,45 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.CustomXmlPartData:interface'
-    summary: 描述通过调用返回的数据的接口`customXmlPart.toJSON()`<!-- -->.
-    name: Word.Interfaces.CustomXmlPartData
-    fullName: Word.Interfaces.CustomXmlPartData
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.CustomXmlPartData#id:member'
-      - 'word!Word.Interfaces.CustomXmlPartData#namespaceUri:member'
-  - uid: 'word!Word.Interfaces.CustomXmlPartData#id:member'
-    summary: |-
-      获取自定义 XML 部件的 ID。 只读。
+### YamlMime:TSType
+name: Word.Interfaces.CustomXmlPartData
+uid: word!Word.Interfaces.CustomXmlPartData:interface
+package: word!
+fullName: Word.Interfaces.CustomXmlPartData
+summary: 描述通过调用返回的数据的接口 `customXmlPart.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: id
+  uid: word!Word.Interfaces.CustomXmlPartData#id:member
+  package: word!
+  fullName: id
+  summary: >-
+    获取自定义 XML 部件的 ID。 只读。
 
-      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-  - uid: 'word!Word.Interfaces.CustomXmlPartData#namespaceUri:member'
-    summary: |-
-      获取自定义 XML 部件的命名空间 URI。 只读。
 
-      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
-    name: namespaceUri
-    fullName: namespaceUri
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'namespaceUri?: string;'
-      return:
-        type:
-          - string
+    \[[API 集： WORDAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+- name: namespaceUri
+  uid: word!Word.Interfaces.CustomXmlPartData#namespaceUri:member
+  package: word!
+  fullName: namespaceUri
+  summary: >-
+    获取自定义 XML 部件的命名空间 URI。 只读。
+
+
+    \[[API 集： WORDAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'namespaceUri?: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 2577c2af7f2793170eab826adc0fb0e364097449
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328345"
