--- a/docs/docs-ref-autogen/word/word/word.interfaces.inlinepicturecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word/word.interfaces.inlinepicturecollectionloadoptions.yml
@@ -1,261 +1,258 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions:interface'
-    summary: |-
-      包含[InlinePicture](xref:word!Word.InlinePicture:class)对象的集合。
+### YamlMime:TSType
+name: Word.Interfaces.InlinePictureCollectionLoadOptions
+uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions:interface
+package: word!
+fullName: Word.Interfaces.InlinePictureCollectionLoadOptions
+summary: >-
+  包含 [InlinePicture](xref:word!Word.InlinePicture:class) 对象的集合。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: Word.Interfaces.InlinePictureCollectionLoadOptions
-    fullName: Word.Interfaces.InlinePictureCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#$all:member'
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#altTextDescription:member'
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#altTextTitle:member'
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#height:member'
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#hyperlink:member'
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#imageFormat:member'
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#lockAspectRatio:member'
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#paragraph:member'
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentContentControl:member'
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentContentControlOrNullObject:member'
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentTable:member'
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentTableCell:member'
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentTableCellOrNullObject:member'
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentTableOrNullObject:member'
-      - 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#width:member'
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#altTextDescription:member'
-    summary: |-
-      对于集合中的每一项：获取或设置一个字符串，表示与嵌入式图像相关联的可选文字。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: altTextDescription
-    fullName: altTextDescription
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'altTextDescription?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#altTextTitle:member'
-    summary: |-
-      对于集合中的每一项：获取或设置一个字符串，该字符串包含嵌入式图像的标题。
+  \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#$all:member
+  package: word!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: altTextDescription
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#altTextDescription:member
+  package: word!
+  fullName: altTextDescription
+  summary: >-
+    对于集合中的每一项：获取或设置一个字符串，表示与嵌入式图像相关联的可选文字。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: altTextTitle
-    fullName: altTextTitle
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'altTextTitle?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#height:member'
-    summary: |-
-      对于集合中的每一项：获取或设置一个数字，该数字描述嵌入式图像的高度。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: height
-    fullName: height
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'height?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#hyperlink:member'
-    summary: |-
-      对于集合中的每一项：获取或设置图像上的超链接。 使用 " \# " 将地址部分与可选位置部分分开。
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'altTextDescription?: boolean;'
+    return:
+      type: boolean
+- name: altTextTitle
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#altTextTitle:member
+  package: word!
+  fullName: altTextTitle
+  summary: >-
+    对于集合中的每一项：获取或设置一个字符串，该字符串包含嵌入式图像的标题。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: hyperlink
-    fullName: hyperlink
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'hyperlink?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#imageFormat:member'
-    summary: |-
-      对于集合中的每一项：获取嵌入式图像的格式。 只读。
 
-      \[[API 集： WORDAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    isPreview: true
-    name: imageFormat
-    fullName: imageFormat
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'imageFormat?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#lockAspectRatio:member'
-    summary: |-
-      对于集合中的每一项：获取或设置一个值，该值指示在调整内嵌图像大小时是否保持其原始比例。
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'altTextTitle?: boolean;'
+    return:
+      type: boolean
+- name: height
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#height:member
+  package: word!
+  fullName: height
+  summary: >-
+    对于集合中的每一项：获取或设置一个数字，该数字描述嵌入式图像的高度。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: lockAspectRatio
-    fullName: lockAspectRatio
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'lockAspectRatio?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#paragraph:member'
-    summary: |-
-      对于集合中的每一项：获取包含嵌入式图像的父段落。
 
-      \[[API 集： WordApi 1.2](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: paragraph
-    fullName: paragraph
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'paragraph?: Word.Interfaces.ParagraphLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.ParagraphLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentContentControl:member'
-    summary: |-
-      对于集合中的每一项：获取包含该嵌入式图像的内容控件。 如果没有父内容控件，则会引发错误。
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'height?: boolean;'
+    return:
+      type: boolean
+- name: hyperlink
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#hyperlink:member
+  package: word!
+  fullName: hyperlink
+  summary: >-
+    对于集合中的每一项：获取或设置图像上的超链接。 使用 " \# " 将地址部分与可选位置部分分开。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: parentContentControl
-    fullName: parentContentControl
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentContentControl?: Word.Interfaces.ContentControlLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.ContentControlLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentContentControlOrNullObject:member'
-    summary: |-
-      对于集合中的每一项：获取包含该嵌入式图像的内容控件。 如果没有父内容控件，则返回 null 对象。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: parentContentControlOrNullObject
-    fullName: parentContentControlOrNullObject
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentContentControlOrNullObject?: Word.Interfaces.ContentControlLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.ContentControlLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentTable:member'
-    summary: |-
-      对于集合中的每一项：获取包含嵌入式图像的表格。 如果表中不包含该错误，则会引发错误。
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'hyperlink?: boolean;'
+    return:
+      type: boolean
+- name: imageFormat
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#imageFormat:member
+  package: word!
+  fullName: imageFormat
+  summary: >-
+    对于集合中的每一项：获取嵌入式图像的格式。 只读。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: parentTable
-    fullName: parentTable
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentTable?: Word.Interfaces.TableLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.TableLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentTableCell:member'
-    summary: |-
-      对于集合中的每一项：获取包含嵌入式图像的表格单元格。 如果表单元格中不包含错误，则会引发错误。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: parentTableCell
-    fullName: parentTableCell
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentTableCell?: Word.Interfaces.TableCellLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.TableCellLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentTableCellOrNullObject:member'
-    summary: |-
-      对于集合中的每一项：获取包含嵌入式图像的表格单元格。 如果未包含在 tableCell 中，则此关系返回空对象。
+    \[[API 集： WORDAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'imageFormat?: boolean;'
+    return:
+      type: boolean
+- name: lockAspectRatio
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#lockAspectRatio:member
+  package: word!
+  fullName: lockAspectRatio
+  summary: >-
+    对于集合中的每一项：获取或设置一个值，该值指示在调整内嵌图像大小时是否保持其原始比例。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: parentTableCellOrNullObject
-    fullName: parentTableCellOrNullObject
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentTableCellOrNullObject?: Word.Interfaces.TableCellLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.TableCellLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentTableOrNullObject:member'
-    summary: |-
-      对于集合中的每一项：获取包含嵌入式图像的表格。 如果未包含在 table 中，则此关系返回空对象。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: parentTableOrNullObject
-    fullName: parentTableOrNullObject
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentTableOrNullObject?: Word.Interfaces.TableLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.TableLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.InlinePictureCollectionLoadOptions#width:member'
-    summary: |-
-      对于集合中的每一项：获取或设置一个值，该值描述嵌入式图像的宽度。
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'lockAspectRatio?: boolean;'
+    return:
+      type: boolean
+- name: paragraph
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#paragraph:member
+  package: word!
+  fullName: paragraph
+  summary: >-
+    对于集合中的每一项：获取包含嵌入式图像的父段落。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: width
-    fullName: width
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'width?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'word!Word.Interfaces.ParagraphLoadOptions:interface'
-    name: Word.Interfaces.ParagraphLoadOptions
-  - uid: 'word!Word.Interfaces.ContentControlLoadOptions:interface'
-    name: Word.Interfaces.ContentControlLoadOptions
-  - uid: 'word!Word.Interfaces.TableLoadOptions:interface'
-    name: Word.Interfaces.TableLoadOptions
-  - uid: 'word!Word.Interfaces.TableCellLoadOptions:interface'
-    name: Word.Interfaces.TableCellLoadOptions
+
+    \[[API 集： WordApi 1.2](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'paragraph?: Word.Interfaces.ParagraphLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.ParagraphLoadOptions:interface" />
+- name: parentContentControl
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentContentControl:member
+  package: word!
+  fullName: parentContentControl
+  summary: >-
+    对于集合中的每一项：获取包含该嵌入式图像的内容控件。 如果没有父内容控件，则会引发错误。
+
+
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentContentControl?: Word.Interfaces.ContentControlLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.ContentControlLoadOptions:interface" />
+- name: parentContentControlOrNullObject
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentContentControlOrNullObject:member
+  package: word!
+  fullName: parentContentControlOrNullObject
+  summary: >-
+    对于集合中的每一项：获取包含该嵌入式图像的内容控件。 如果没有父内容控件，则返回 null 对象。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentContentControlOrNullObject?: Word.Interfaces.ContentControlLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.ContentControlLoadOptions:interface" />
+- name: parentTable
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentTable:member
+  package: word!
+  fullName: parentTable
+  summary: >-
+    对于集合中的每一项：获取包含嵌入式图像的表格。 如果表中不包含该错误，则会引发错误。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentTable?: Word.Interfaces.TableLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.TableLoadOptions:interface" />
+- name: parentTableCell
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentTableCell:member
+  package: word!
+  fullName: parentTableCell
+  summary: >-
+    对于集合中的每一项：获取包含嵌入式图像的表格单元格。 如果表单元格中不包含错误，则会引发错误。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentTableCell?: Word.Interfaces.TableCellLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.TableCellLoadOptions:interface" />
+- name: parentTableCellOrNullObject
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentTableCellOrNullObject:member
+  package: word!
+  fullName: parentTableCellOrNullObject
+  summary: >-
+    对于集合中的每一项：获取包含嵌入式图像的表格单元格。 如果未包含在 tableCell 中，则此关系返回空对象。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentTableCellOrNullObject?: Word.Interfaces.TableCellLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.TableCellLoadOptions:interface" />
+- name: parentTableOrNullObject
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#parentTableOrNullObject:member
+  package: word!
+  fullName: parentTableOrNullObject
+  summary: >-
+    对于集合中的每一项：获取包含嵌入式图像的表格。 如果未包含在 table 中，则此关系返回空对象。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentTableOrNullObject?: Word.Interfaces.TableLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.TableLoadOptions:interface" />
+- name: width
+  uid: word!Word.Interfaces.InlinePictureCollectionLoadOptions#width:member
+  package: word!
+  fullName: width
+  summary: >-
+    对于集合中的每一项：获取或设置一个值，该值描述嵌入式图像的宽度。
+
+
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'width?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: ef2269b1766483ab3dc938ee86748f50620f758c
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328303"
